# CRPG

./: CMakeLists.txt  README.md  build.sh  compile_textures.sh
assets/textures/: floors.ase  roofs.ase  walls.ase
build_scripts/: compile_textures.py
docs/: COMBAT.md  CORE_PLAYER_LOOP.md  CORE_SYSTEMS.md  GAME_TRIANGLE.md  SSDD.md  subsystem_design.md
include/assets/: textures_precomped.h
include/data/: ai_params.h  coordinates.h  entity.h  event_log.h  game.h  game_state.h  globals.h  globs.h  map.h  nav_path.h  renderable.h  scene.h  wall_tile.h  window_data.h
include/rendering/: renderer.h
include/systems/: ai_controller.h  character_controller.h  combat.h  engine.h  entity_controller.h  entity_manager.h  event_log.h  game_runner.h  game_state.h  message_log.h  mouse_manager.h  navigation.h  path_finding.h  renderer.h  scene_camera.h  window_handler.h  window_manager.h  world_camera.h
src/: main.c
src/data/: entity.c  event_log.c  game.c  map.c  scene.c  wall_tile.c
src/rendering/: renderer.c  renderer_entity.c  renderer_map.c  renderer_ui.c
src/systems/: character_controller.c  combat.c  engine.c  entity_controller.c  entity_manager.c  event_log.c  game_runner.c  message_log.c  mouse_manager.c  navigation.c  path_finding.c  renderer.c  scene_camera.c  window_handler.c  window_manager.c  world_camera.c
